Fix work wrapping on commit message

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -74,6 +74,7 @@
   padding-left: 6px;
   flex-shrink: 0;
   flex-wrap: wrap;
+  word-wrap: break-word;
 }
 .badgeWrapper {
   background: #f0f0f0;
